# BodaHomeDash

./: .gitattributes  .gitignore  README.md  pyproject.toml
backend/home_dashboard/: __init__.py  backup.py  config.py  database.py  events.py  hardware.py  main.py  models.py  security.py  services.py  utils.py
backend/home_dashboard/providers/: barcode.py  calendar.py  recipes.py  weather.py
backend/tests/: conftest.py  test_api.py  test_calendar_provider.py  test_database.py  test_hardware.py  test_security_backup.py  test_services.py  test_utils.py
deploy/: home-dashboard-update.service  home-dashboard.service.in  install.sh  launch-kiosk.sh  network-helper  uninstall.sh  update.sh
docs/: BACKUPS.md  HARDWARE.md  INSTALLATION.md  PROJECT_PLAN.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  inputAndPantry.test.ts  inputPreferences.ts  kioskDragScroll.ts  nutrition.ts  plannerPalette.ts  scannerCapture.ts  styles.css  theme.test.ts  theme.ts  types.ts  weatherPresentation.test.ts  weatherPresentation.ts
frontend/src/components/: ConfirmDialog.tsx  ExpirationDatePad.tsx  MobileBarcodeScanner.tsx  Modal.tsx  ProductEntry.tsx  RadarMap.tsx  SharedNotepad.tsx  SwipeActionRow.tsx  TouchInput.tsx  TouchKeyboard.tsx  WeatherCanvas.tsx  WeatherIcon.tsx
frontend/src/screens/: HomeScreen.tsx  PantryScreen.tsx  RecipesScreen.tsx  RemindersScreen.tsx  SettingsScreen.tsx  ShoppingScreen.tsx  WeatherScreen.tsx  WeekPlannerScreen.tsx
