[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "home-dashboard"
version = "0.1.0"
description = "Local-first household calendar, pantry, shopping, reminders, weather and kiosk dashboard"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.34,<1",
  "httpx>=0.28,<1",
  "pydantic>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "cryptography>=44,<47",
  "argon2-cffi>=23.1,<26",
  "caldav>=1.4,<3",
  "icalendar>=6.1,<8",
  "recurring-ical-events>=3.4,<4",
  "python-dateutil>=2.9,<3",
  "holidays>=0.68,<1",
]

[project.optional-dependencies]
pi = [
  "gpiozero>=2.0,<3",
  "lgpio>=0.2.2.0,<1",
  "evdev>=1.7,<2",
]
test = [
  "pytest>=8.3,<9",
  "pytest-cov>=6,<8",
  "pytest-asyncio>=0.25,<2",
]

[project.scripts]
home-dashboard = "home_dashboard.main:run"

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = "-q"
